backend/flux/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: quiet-signal
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: ghcr.io/lumpybumpy06/backend:1779983694354 # {"$imagepolicy": "quiet-signal:quiet-signal-backend"}
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /docs
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /docs
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
